--- a/src/index.html
+++ b/src/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KJS | odzież oraz artykuły BHP, usługi szwalnicze</title>
+    <title>KJS | odzież robocza, artykuły BHP, usługi szwalnicze</title>
     <link rel="icon" type="image/x-icon" href="/img/favicon.png" />
 
-    <meta property="og:site_name" content="KJS | odzież oraz artykuły BHP, usługi szwalnicze" />
+    <meta property="og:site_name" content="KJS | odzież robocza, ochronna, artykuły BHP, usługi szwalnicze" />
     <meta property="og:url" content="bhpstrykowo.pl" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="KJS | odzież oraz artykuły BHP, usługi szwalnicze" />
-    <meta property="og:description" content="Jesteśmy producentem oraz importerem odzieży oraz artykułów BHP. Oferujemu usługi krawieckie i szewskie. Posiadamy szeroką gamę rękawic, obuwia oraz innych środków ochrony indywidualnej." />
+    <meta property="og:title" content="KJS | odzież robocza, ochronna, artykuły BHP, usługi szwalnicze" />
+    <meta property="og:description" content="Jesteśmy producentem oraz importerem odzieży oraz artykułów BHP. Oferujemu usługi krawieckie i szewskie. W naszym asortymencie znajdują się odzież robocza, ochronna, obuwie BHP, rękawice ochronne oraz inne środki ochrony indywidualnej." />
     <meta property="og:image" content="/img/meta-image.jpg" />
     <meta property="og:image:secure_url" content="/img/meta-image.jpg" />
-    <meta name="twitter:text:title" content="KJS | odzież oraz artykuły BHP, usługi szwalnicze" />
+    <meta name="twitter:text:title" content="KJS | odzież robocza, ochronna, artykuły BHP, usługi szwalnicze" />
     <meta name="twitter:image" content="/img/meta-image.jpg" />
-    <meta name="description" content="Jesteśmy producentem oraz importerem odzieży oraz artykułów BHP. Oferujemu usługi krawieckie i szewskie. Posiadamy szeroką gamę rękawic, obuwia oraz innych środków ochrony indywidualnej." />
-    <meta name="keywords" content="KJS, bhpstrykowo, bhp, odzież, robocza, ochronna, reklamowa, haft, nadruk, nadruki, rękawice, ostrzegawcza, tapicerki, szycie na miarę, bhpstrykowo, kjs, kjstrykowo, artykuły bhp" />
+    <meta name="description" content="Jesteśmy producentem oraz importerem odzieży oraz artykułów BHP. Oferujemu usługi krawieckie i szewskie. W naszym asortymencie znajdują się odzież robocza, ochronna, obuwie BHP, rękawice ochronne oraz inne środki ochrony indywidualnej." />
+    <meta name="keywords" content="KJS, bhpstrykowo, usługi krawieckie, bhp, odzież, robocza, ochronna, reklamowa, haft, nadruk, nadruki, rękawice, ostrzegawcza, tapicerki, szycie na miarę, bhpstrykowo, kjs, kjstrykowo, artykuły bhp, usługi szwalnicze, krawiectwo, szwalnia, namioty, namioty wielkogabarytowe, namiot, szycie namiotów, zlecenia szycia XXL, szycie XXL, szycie XL, podsufitka namiotowe, gale namiotowe, baseny, pokrywy stadionów, haft, nadruk" />
     <meta name="image" content="/img/meta-image.jpg" />
 
     <script
@@ -56,52 +56,52 @@
       </div>
     </menu>
     <section class="container pt-giga">
-      <div class="row align-items-center">
+      <div class="row align-items-center flex-column-reverse flex-lg-row">
         <div class="col-12 col-lg-6">
           <h1 class="pb-kilo">
-            KJS - odzież oraz artykuły BHP, usługi szwalnicze.
+            KJS - odzież robocza, ochronna, artykuły BHP, usługi szwalnicze.
           </h1>
           <p class="pb-deca">
-            Jesteśmy producentem oraz importerem odzieży zawodowej oraz
+            Jesteśmy producentem oraz importerem odzieży roboczej, ochronnej oraz
             artykułów BHP. Posiadamy szeroką gamę rękawic, obuwia oraz innych
             środków ochrony indywidualnej. Oferujemy usługi szwalnicze oraz
             krawieckie.
-          </p>
+                   </p>
           <div class="socials mt-hecto">
             <a
               href="https://www.facebook.com/KJS-Odzie%C5%BC-robocza-artyku%C5%82y-BHP-us%C5%82ugi-krawiecko-szwalnicze-113377704176829"
               target="_blank"
               class="mr-deci"
+              aria-label="Link do naszego Facebooka"
               ><i class="fab fa-facebook-square"></i
             ></a>
             <a
               href="https://www.linkedin.com/company/75858542/admin/"
               target="_blank"
+              aria-label="Link do naszego Linkedina"
               ><i class="fab fa-linkedin"></i
             ></a>
           </div>
         </div>
 
-        <div class="col-6 d-none d-lg-block">
+        <div class="col-lg-6 pb-kilo pb-lg-zero">
           <img
             src="./img/hero.png"
             class="w-100"
-            alt="Obrazek prezentujący pracownika fizycznego ubranego w odziez i artykuły BHP"
+            alt="Odziez robocza oraz artykuły BHP"
           />
         </div>
       </div>
     </section>
 
     <section class="container pt-giga pt-lg-zetta">
-      <div class="row">
+      <div class="row flex-column-reverse flex-lg-row">
         <div class="col-12 col-lg-6 col-xl-6">
           <div class="text-content">
             <h2 class="pb-kilo">Oferta</h2>
             <p>
-              W ofercie naszej firmy znajdą Państwo szeroką gamę odzieży
-              roboczej, ochronnej, reklamowej, sportowej oraz ostrzegawczej,
-              dostosowanej do wielu czynników zewnętrznych oraz indywidualnych
-              potrzeb klienta. Posiadamy wysokiej jakości rękawice oraz obuwie
+              W ofercie naszej firmy znajduje się odzież ochronna, robocza, reklamowa, sportowa oraz ostrzegawcza.
+              Nasze artykuły są odporne na działanie czynników zewnętrznych, takich jak temperatura, tarcie czy elektryczność. Posiadamy wysokiej jakości rękawice oraz obuwie
               wszelkiego rodzaju.
             </p>
             <a
@@ -112,13 +112,81 @@
             </a>
           </div>
         </div>
-        <div class="col-12 offset-lg-1 col-lg-5 col-xl-5 pt-tera pt-lg-zero">
-          <div class="video-container">
-            <video muted autoplay loop controls>
-              <source src="./assets/kjs.mp4" type="video/mp4" />
-              Twoja przeglądarka nie wspiera tagu video.
-            </video>
+        <div
+          class="pb-tera pb-lg-zero col-12 col-sm-8 offset-lg-1 col-lg-4 col-xl-5"
+        >
+        <div class="video-container">
+          <video muted autoplay loop controls>
+            <source src="./assets/kjs.mp4" type="video/mp4" />
+            Twoja przeglądarka nie wspiera tagu video.
+          </video>
+        </div>
+        </div>
+        
+      </div>
+    </section>
+
+    <section class="container pt-giga pt-lg-zetta">
+      <div class="row">
+        <div
+          class="pb-tera pb-lg-zero col-12 col-sm-8 col-lg-4 col-xl-5"
+        >
+          <img
+            src="./img/art-bhp.png"
+            alt="Obrazek prezentujący męzczyznę ubranego w kask i kamizelkę odblaskową"
+          />
+        </div>
+        <div class="col-12 col-lg-7 col-xl-6 offset-lg-1">
+          <div class="text-content">
+            <h2 class="pb-kilo">Artykuły BHP</h2>
+            <p>
+              Dostarczane przez nas artykuły BHP zapewnią państwu komfort oraz
+              bezpieczeństwo pracy w każdych warunkach.
+            </p><br/>
+            <p>
+              Nasze produkty spełniają wszelkie normy i standardy UE, normy
+              sanitarne i technologiczne. Do produkcji stosujemy tylko
+              sprawdzone materiały i surowce charakteryzujące się wysoką
+              trwałością w użytkowaniu.
+            </p>
+            <a
+              class="btn btn-default mt-hecto"
+              href="https://kjs.artbhp.pl/"
+              target="_blank"
+            >
+              <span class="pr-deci">Zobacz nasze produkty</span>
+              <i class="fas fa-external-link-alt"></i>
+            </a>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="container pt-giga pt-lg-zetta">
+      <div class="row flex-column-reverse flex-lg-row">
+        <div class="col-12 col-lg-6 col-xl-6">
+          <div class="text-content">
+            <h2 class="pb-kilo">Namioty</h2>
+            <p>
+              W naszej ofercie znajdą Państwo realizacje <strong>namiotów imprezowych</strong>, reklamowych, ogrodowych i przemysłowych.
+              <br/> <br/>
+              Materiały, które wykorzystujemy są odporne na niesprzyjające warunki atmosferyczne, a eleganckie <strong>gale namiotowe</strong> będą szykownym dodatkiem do każdego podniosłego wnętrza.
+            </p>
+            <a
+              class="btn btn-default mt-hecto"
+              href="/namioty"
+            >
+              <span>Zobacz nasze namioty</span>
+            </a>
+          </div>
+        </div>
+        <div
+          class="pb-tera pb-lg-zero col-12 col-sm-8 offset-lg-1 col-lg-4 col-xl-5"
+        >
+          <img
+            src="./img/home-namioty.png"
+            alt="Obrazek prezentujący męzczyznę ubranego w kask i kamizelkę odblaskową"
+          />
         </div>
       </div>
     </section>
@@ -126,16 +194,16 @@
     <section class="container pt-giga pt-lg-zetta">
       <div class="row">
         <div
-          class="pb-tera pb-lg-zero col-12 col-sm-8 offset-lg-1 col-lg-4 col-xl-5"
+          class="pb-tera pb-lg-zero col-12 col-sm-8 col-lg-4 col-xl-5"
         >
           <img
             src="./img/poszycia.png"
             alt="Obrazek prezentujący poszycia namiotu robione przez naszą firmę."
           />
         </div>
-        <div class="col-12 col-lg-7 col-xl-6">
+        <div class="col-12 col-lg-7 col-xl-6 offset-lg-1">
           <div class="text-content">
-            <h2 class="pb-kilo">Poszycia</h2>
+            <h2 class="pb-kilo">Poszycia wielkogabarytowe</h2>
             <p>
               Wykonujemy wszelkiego rodzaju zlecenia krawieckie, takie jak
               przeszycia tapicerskie, pokrowce foteli, poszycia wszelkiego
@@ -159,24 +227,21 @@
       <div class="row flex-column-reverse flex-lg-row">
         <div class="col-12 col-lg-7 col-xl-6">
           <div class="text-content">
-            <h2 class="pb-kilo">Artykuły BHP</h2>
+            <h2 class="pb-kilo">Zlecenia krawieckie</h2>
             <p>
-              Dostarczane przez nas artykuły BHP zapewnią państwu komfort oraz
-              bezpieczeństwo pracy w każdych warunkach.
-            </p>
-            <p>
-              Nasze produkty spełniają wszelkie normy i standardy UE, normy
-              sanitarne i technologiczne. Do produkcji stosujemy tylko
+              Szyjemy na miarę odzież roboczą, ochronną, sportową i reklamową.
+              Posiadamy wykroje i wzory dopasowane na każdą okazję.
+            <br/><br/>
+              Do produkcji stosujemy tylko
               sprawdzone materiały i surowce charakteryzujące się wysoką
-              trwałością w użytkowaniu.
+              trwałością w użytkowaniu. Wysokiej jakości hafty oraz nadruki dopełnią wyglądu całej odzieży.
             </p>
             <a
               class="btn btn-default mt-hecto"
-              href="https://kjs.artbhp.pl/"
+              href="/"
               target="_blank"
             >
-              <span class="pr-deci">Zobacz nasze produkty</span>
-              <i class="fas fa-external-link-alt"></i>
+              <span class="pr-deci">Zobacz nasze zlecenia krawieckie</span>
             </a>
           </div>
         </div>
@@ -187,6 +252,13 @@
             src="./img/art-bhp.png"
             alt="Obrazek prezentujący męzczyznę ubranego w kask i kamizelkę odblaskową"
           />
+
+          <!-- <div class="video-container">
+            <video muted autoplay loop controls>
+              <source src="./assets/kjs.mp4" type="video/mp4" />
+              Twoja przeglądarka nie wspiera tagu video.
+            </video>
+          </div> -->
         </div>
       </div>
     </section>
@@ -248,6 +320,19 @@
               </p>
             </div>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="container pt-giga pt-lg-zetta" id="kontakt">
+      <div class="row">
+        <div class="col-12 text-center">
+          <img src="./img/wyprobuj-polskie.jpg" alt="Wypróbuj tego, co polskie" class="img-radius" />
+        </div>
+        <div class="col-12 text-center">
+          <p class="pt-kilo">
+            Jesteśmy polską firmą mieszczącą się w okolicach Poznania. Realizujemy wysyłkę na całą Polskę oraz Unię Europejską.
+          </p>
         </div>
       </div>
     </section>
