--- a/src/pages/namioty/index.html
+++ b/src/pages/namioty/index.html
@@ -60,25 +60,67 @@
       <div class="row pt-md-mega pt-kilo">
         <div class="col-12">
           <div class="text-content">
-            <h2 class="pb-deca pb-md-kilo">Poszycia stadionów</h2>
+            <h2 class="pb-deca pb-md-kilo">Dopasowane namioty imprezowe, reklamowe, wielkopowierzchniowe - Poznań</h2>
             <p class="pb-deca">
-              Materiałowe <strong>poszycie / pokrowiec na stadion</strong> ochrania przed niesprzyjającymi warunkami atmosferycznymi. Pokrycie na trawnik konserwuje i pozwala na jego utrzymanie w najlepszej kondycji. Nasze zakłady krawieckie są przystosowane do wykonywania poszyć <strong>gabarytowych XXL</strong>. Mamy doświadczenie w pracy nad <strong>poszyciami na stadiony</strong>. Poszycia są trwałe, wykonane z dobrej jakości materiału, z gwarancją jakości i poprawek.
+              Szukasz miejsca na duże wydarzenie, które będzie zachwycać uczestników? A może chcesz wyposażyć swój obiekt noclegowy w wyjątkowe przestrzenie do spania lub spędzania czasu, które zapadną w pamięć gościom? Nasza firma szyje dopasowane <strong>namioty imprezowe</strong>, reklamowe czy tworzące przestrzeń roboczą.
             </p>
-            <p>Za nami realizacje dla marek takich jak Lech Poznań. Realizowaliśmy pokrycia stadionów, a także inne poszycia wielkogabarytowe: namioty, baseny, zbiorniki wodne.</p>
+            <p class="pb-deca">Szyjemy <strong>namioty wielkopowierzchniowe</strong> na duże imprezy, takie jak targi, koncerty, wesela, pikniki oraz miejsca do spędzania czasu, w których można się schronić przed niepogodą. W naszej ofercie znajdują się zarówno namioty ogrodowe oraz przemysłowe - pod hale pracownicze.</p>
+            <p class="pb-deca">
+              Wykorzystujemy solidne materiały, które zapewniają trwałość i odporność na warunki atmosferyczne: deszcze, burze, upały, a także kurz, brud czy wilgoć. Do wyboru mamy szeroką gamę kolorów i wzorów, dzięki czemu możesz wybrać namiot, który będzie idealnie pasował do Twoich potrzeb.
+            </p>
+            <p class="pb-deca">
+              Namioty, które szyjemy, mogą z powodzeniem być wykorzystane na jednej z imprez:
+            </p>
+            <ul class="pb-deca">
+              <li>
+                <strong>Eleganckaa gala</strong>: Namiot wielkopowierzchniowy może stworzyć elegancką przestrzeń, w której możesz zorganizować galę. Nasze wysokiej klasy materiały w połączeniu z kwiatami, świecami i innymi dekoracjami stworzą wyjątkową atmosferę.
+              </li>
+              <li><strong>Sportowy festiwal</strong>: Namiot wielkopowierzchniowy może być wykorzystywany jako miejsce rozgrywania meczów sportowych lub innych wydarzeń sportowych. Może również być wykorzystany jako miejsce, w którym uczestnicy festiwalu mogą odpocząć i zjeść posiłek.</li>
+              <li>
+                <strong>Koncert na otwartej przestrzeni</strong>: Namiot wielkopowierzchniowy może zapewnić ochronę przed deszczem i wiatrem podczas koncertu na otwartej przestrzeni, lub miejsce, w którym uczestnicy koncertu mogą kupić jedzenie i napoje. Dodatkowo, nasze wysokiej jakości nadruki zapewnią świetną reklamę.
+              </li>
+            </ul>
+            <p class="pb-deca">
+              Skontaktuj się z nami, a przedstawimy Ci dopasowaną ofertę. Wybierz u nas również elegancką, ozdobną <a href="podsufitek-namiotowy" class="text-decoration-underline">galę namiotową</a>.
+            </p>
             <a
-              class="btn btn-default mt-hecto"
+              class="btn btn-default"
               href="/#kontakt"
             >
               <span class="pr-deci">Skontaktuj się z nami i wyceń ofertę</span>
             </a>
           </div>
         </div>
+        
+        <div class="offset-sm-2 col-sm-8 col-lg-11 pt-md-mega pt-kilo offset-lg-1">
+          <img src="../../img/clean/n-8.jpg" alt="Namiot ogrodowy imprezowy"/>
+        </div>
+        <div class="offset-sm-2 col-sm-8 col-lg-11 pt-md-mega pt-kilo offset-lg-1">
+          <img src="../../img/clean/n-3.jpg" alt="Namiot ogrodowy rekreacyjny, tworzący przestrzeń do spędzania czasu"/>
+        </div>
+        <div class="offset-sm-2 col-sm-8 col-lg-11 pt-md-mega pt-kilo offset-lg-1">
+          <img src="../../img/clean/n-5.jpg" alt="Elegancki namiot ogrodowy imprezowy"/>
+        </div>
+        <div class="offset-sm-2 col-sm-8 col-lg-11 pt-md-mega pt-kilo offset-lg-1">
+          <img src="../../img/clean/n-7.jpg" alt="Namiot ogrodowy imprezowy"/>
+        </div>
 
-        <div class="offset-sm-2 col-sm-8 col-lg-5 pt-md-mega pt-kilo offset-lg-1">
-          <img src="../../img/clean/poszycie-1.jpeg" alt="Pokrywa ochronna na trawnik" />
+        <div class="offset-sm-2 col-sm-8 col-lg-11 pt-md-mega pt-kilo offset-lg-1">
+          <img src="../../img/clean/n-10.jpg" alt="Namiot ogrodowy imprezowy z zewnątrz"/>
+        </div>
+        <div class="offset-sm-2 col-sm-8 col-lg-11 pt-md-mega pt-kilo offset-lg-1">
+          <img src="../../img/clean/n-2.jpg" alt="Namiot przemysłowy tworzący halę pracowniczą"/>
+        </div>
+
+        <!-- <div class="offset-sm-2 col-sm-8 col-lg-5 pt-md-mega pt-kilo offset-lg-1">
+          <img src="../../img/clean/namiot-5.jpg" alt="Pokrywa ochronna na trawnik" />
         </div>
         <div class="offset-sm-2 col-sm-8 col-lg-5 pt-md-mega pt-kilo offset-lg-1">
-          <img src="../../img/clean/poszycie-2.jpeg" alt="Pokrowiec na stadion"/>
+          <img src="../../img/clean/namiot-4.jpg" alt="Pokrowiec na stadion"/>
+        </div> -->
+        
+        <div class="offset-sm-2 col-sm-8 col-lg-11 pt-md-mega pt-kilo offset-lg-1">
+          <img src="../../img/clean/namiot-2.jpg" alt="Mały namiot ogrodowy"/>
         </div>
       </div>
     </section>
