--- a/src/pages/odziez-szyta-na-miare/index.html
+++ b/src/pages/odziez-szyta-na-miare/index.html
@@ -18,7 +18,7 @@
     <meta name="twitter:text:title" content="KJS | odzież szyta na miarę" />
     <meta name="twitter:image" content="../../img/meta-image.jpg" />
     <meta name="description" content="Oferujemy usługi krawieckie i szewskie. Prowadzimy usługi konserwacji i naprawy odzieży." />
-    <meta name="keywords" content="KJS, bhpstrykowo, bhp, odzież, robocza, ochronna, reklamowa, haft, nadruk, nadruki, rękawice, ostrzegawcza, tapicerki, szycie na miarę, bhpstrykowo, kjs, kjstrykowo, artykuły bhp" />
+    <meta name="keywords" content="KJS, bhpstrykowo, usługi krawieckie, usługi szwalnicze, krawiectwo, szwalnia, namioty, namioty wielkogabarytowe, namiot, szycie namiotów, zlecenia szycia XXL, szycie XXL, szycie XL, podsufitka namiotowe, gale namiotowe, baseny, pokrywy stadionów, haft, nadruk" />
     <meta name="image" content="../../img/meta-image.jpg" />
 
     <script
