--- a/src/pages/podsufitek-namiotowy/index.html
+++ b/src/pages/podsufitek-namiotowy/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KJS | Podsufitek namiotowy</title>
+    <title>KJS | Podsufitka, gala namiotowa</title>
     <link rel="icon" type="image/x-icon" href="../../img/favicon.png" />
 
-    <meta property="og:site_name" content="KJS | Podsufitek namiotowy" />
+    <meta property="og:site_name" content="KJS | Podsufitka, gala namiotowa" />
     <meta property="og:url" content="bhpstrykowo.pl" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="KJS | Podsufitek namiotowy" />
-    <meta property="og:description" content="Oferujemy usługi krawieckie i szewskie. Nasze magazyny są przystosowane do wytwarzania poryw i pokryć wielkogabarytowych." />
+    <meta property="og:title" content="KJS | Podsufitka, gala namiotowa" />
+    <meta property="og:description" content="Sufitka namiotowa, inaczej podsufitka czy gala, to materiał podwieszany pod sufitem hali namiotowej. Jest to doskonały sposób na stworzenie wyjątkowej atmosfery w namiocie imprezowym lub wystrojowym. Jest wykonana z wysoce eleganckiego materiału, dzięki czemu nadaje podniosły i wytworny charakter wnętrzu. Dzięki różnorodności wzorów i kolorów można je dopasować do każdego rodzaju imprezy" />
     <meta property="og:image" content="../../img/meta-image.jpg" />
     <meta property="og:image:secure_url" content="../../img/meta-image.jpg" />
-    <meta name="twitter:text:title" content="KJS | Podsufitek namiotowy" />
+    <meta name="twitter:text:title" content="KJS | Podsufitka, gala namiotowa" />
     <meta name="twitter:image" content="../../img/meta-image.jpg" />
-    <meta name="description" content="Oferujemy usługi krawieckie i szewskie. Nasze magazyny są przystosowane do wytwarzania poryw i pokryć wielkogabarytowych." />
-    <meta name="keywords" content="KJS, bhpstrykowo, bhp, odzież, robocza, ochronna, reklamowa, haft, nadruk, nadruki, rękawice, ostrzegawcza, tapicerki, szycie na miarę, bhpstrykowo, kjs, kjstrykowo, artykuły bhp" />
+    <meta name="description" content="Sufitka namiotowa, inaczej podsufitka czy gala, to materiał podwieszany pod sufitem hali namiotowej. Jest to doskonały sposób na stworzenie wyjątkowej atmosfery w namiocie imprezowym lub wystrojowym. Jest wykonana z wysoce eleganckiego materiału, dzięki czemu nadaje podniosły i wytworny charakter wnętrzu. Dzięki różnorodności wzorów i kolorów można je dopasować do każdego rodzaju imprezy" />
+    <meta name="keywords" content="KJS, bhpstrykowo, usługi krawieckie, usługi szwalnicze, krawiectwo, szwalnia, namioty, namioty wielkogabarytowe, namiot, szycie namiotów, zlecenia szycia XXL, szycie XXL, szycie XL, podsufitka namiotowe, gale namiotowe, baseny, pokrywy stadionów, haft, nadruk" />
     <meta name="image" content="../../img/meta-image.jpg" />
 
     <script
@@ -62,10 +62,25 @@
           <div class="text-content">
             <h2 class="pb-deca pb-md-kilo">Gala do namiotów imprezowych</h2>
             <p class="pb-deca">
-              <strong>Podsufitek namiotowy</strong> do hali to połączenie elegancji i funkcjonalności. Biały materiał zasłania stelaż, co nadaje podniosły i wytworny charakter całej sali. Precyzyjnie wykonane, aksamitny materiał i dbałość o każdy detal tworzy atmosferę pełną klasy i wyrafinowania.</p>
-            <p>Zaufaj nam, abyśmy mogli uczynić Twoją <strong>galę namiotową</strong> niezapomnianą. Nasze <strong>sufitowe konstrukcje</strong> są nie tylko elementem dekoracyjnym, ale także wyrazem naszej pasji do krawiectwa. Dzięki nam, Twoje wydarzenie nabierze charakteru, a każdy detal <strong>podsufitki</strong> wypełni przestrzeń elegancją i prestiżem.</p>
+              <strong>Sufitka namiotowa</strong>, inaczej <strong>podsufitka</strong> czy gala, to materiał podwieszany pod sufitem <a href="/namioty" class="text-decoration-underline">hali namiotowej</a>.
+            </p>
+            <p class="pb-deca">
+              Jest to doskonały sposób na stworzenie wyjątkowej atmosfery w namiocie imprezowym lub wystrojowym. Jest wykonana z wysoce eleganckiego materiału, dzięki czemu nadaje podniosły i wytworny charakter wnętrzu. Dzięki różnorodności wzorów i kolorów można je dopasować do każdego rodzaju imprezy.
+            </p>
+            <h3 class="pb-deca">Zalety podsufitek namiotowych</h3>
+            <p class="pb-deca">Sufitki namiotowe mają wiele zalet, które czynią je popularnym wyborem dla organizatorów imprez. Oto niektóre z nich:</p>
+            <ul class="pb-deca">
+              <li><strong>Tworzą wyjątkową atmosferę</strong>: Sufitki namiotowe mogą całkowicie odmienić wygląd namiotu i nadać mu wyjątkowego klimatu. Mogą być wykorzystane do stworzenia romantycznej, eleganckiej lub ekscytującej atmosfery, w zależności od rodzaju imprezy.</li>
+              <li><strong>Zapewniają prywatność</strong>: Sufitki namiotowe mogą zapewnić dodatkową prywatność w namiocie, co jest ważne zwłaszcza podczas imprez w miejscach publicznych.</li>
+              <li>
+                <strong>Chronią przed warunkami atmosferycznymi</strong>: Sufitki namiotowe mogą ochronić gości przed słońcem, deszczem lub wiatrem.
+              </li>
+            </ul>
+            <p class="pb-deca">
+              Zaufaj nam, abyśmy mogli uczynić Twoją <strong>imprezę namiotową</strong> niezapomnianą. Nasze <strong>sufitowe konstrukcje</strong> są nie tylko elementem dekoracyjnym, ale także wyrazem naszej pasji do krawiectwa. Dzięki nam, Twoje wydarzenie nabierze charakteru, a każdy detal <strong>podsufitki</strong> wypełni przestrzeń elegancją i prestiżem.
+            </p>
             <a
-              class="btn btn-default mt-hecto"
+              class="btn btn-default"
               href="/#kontakt"
             >
               <span class="pr-deci">Skontaktuj się z nami i wyceń ofertę</span>
@@ -74,13 +89,28 @@
         </div>
 
         <div class="offset-sm-2 col-sm-8 col-lg-5 pt-md-mega pt-kilo offset-lg-1">
-          <img src="../../img/clean/1-261.jpg" alt="Namiot imprezowy z podsifitkiem, gala do namiotów imprezowych" />
+          <img src="../../img/clean/1-261.jpg" alt="Namiot imprezowy z podsifitką" />
         </div>
         <div class="offset-sm-2 col-sm-8 col-lg-5 pt-md-mega pt-kilo offset-lg-1">
           <img src="../../img/clean/1-270.jpg" alt="Dekoracje materiałowe w namiocie imprezowym"/>
         </div>
         <div class="offset-sm-2 col-sm-8 col-lg-11 pt-md-mega pt-kilo offset-lg-1">
-          <img src="../../img/clean/1-260.jpg" alt="Namiot imprezowy z podsifitkiem, gala do namiotów imprezowych"/>
+          <img src="../../img/clean/1-260.jpg" alt="Elegancka gala namiotowa"/>
+        </div>
+        <div class="offset-sm-2 col-sm-8 col-lg-11 pt-md-mega pt-kilo offset-lg-1">
+          <img src="../../img/clean/podsufitka-2.jpeg" alt="Podsufitka namiotowa"/>
+        </div>
+        <div class="offset-sm-2 col-sm-8 col-lg-11 pt-md-mega pt-kilo offset-lg-1">
+          <img src="../../img/clean/podsufitka-1.jpeg" alt="Podsufitka namiotowa"/>
+        </div>
+        <div class="offset-sm-2 col-sm-8 col-lg-11 pt-md-mega pt-kilo offset-lg-1">
+          <img src="../../img/clean/n-9.jpg" alt="Podsufitka namiotowa"/>
+        </div>
+        <div class="offset-sm-2 col-sm-8 col-lg-11 pt-md-mega pt-kilo offset-lg-1">
+          <img src="../../img/clean/n-1.jpg" alt="Gala namiotowa"/>
+        </div>
+        <div class="offset-sm-2 col-sm-8 col-lg-11 pt-md-mega pt-kilo offset-lg-1">
+          <img src="../../img/clean/n-4.jpg" alt="Elegancka gala w namiocie imprezowym"/>
         </div>
       </div>
     </section>
