--- a/src/pages/realizacje/index.html
+++ b/src/pages/realizacje/index.html
@@ -12,12 +12,12 @@
     <meta property="og:url" content="bhpstrykowo.pl" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="KJS | realizacje usług krawieckich i szwalniczych" />
-    <meta property="og:description" content="Realizujemy poszycia wielkogabarytowe, pokrycia XXL, pokrywy stadionów. Realizujemy usługi konserwacji, czyszczenia i naprawy odziey. Realizujemy i dopasowujemy projekty graficzne zgodnie z wytycznymi Klienta." />
+    <meta property="og:description" content="Realizujemy poszycia wielkogabarytowe, pokrycia XXL, pokrywy stadionów. Realizujemy usługi konserwacji, czyszczenia i naprawy odzieży. Realizujemy i dopasowujemy projekty graficzne zgodnie z wytycznymi Klienta." />
     <meta property="og:image" content="/img/meta-image.jpg" />
     <meta property="og:image:secure_url" content="/img/meta-image.jpg" />
     <meta name="twitter:text:title" content="KJS | realizacje usług krawieckich i szwalniczych" />
     <meta name="twitter:image" content="/img/meta-image.jpg" />
-    <meta name="description" content="Realizujemy poszycia wielkogabarytowe, pokrycia XXL, pokrywy stadionów. Realizujemy usługi konserwacji, czyszczenia i naprawy odziey. Realizujemy i dopasowujemy projekty graficzne zgodnie z wytycznymi Klienta." />
+    <meta name="description" content="Realizujemy poszycia wielkogabarytowe, pokrycia XXL, pokrywy stadionów. Realizujemy usługi konserwacji, czyszczenia i naprawy odzieży. Realizujemy i dopasowujemy projekty graficzne zgodnie z wytycznymi Klienta." />
     <meta name="keywords" content="KJS, bhpstrykowo, bhp, odzież, robocza, ochronna, reklamowa, haft, nadruk, nadruki, rękawice, ostrzegawcza, tapicerki, szycie na miarę, bhpstrykowo, kjs, kjstrykowo, artykuły bhp" />
     <meta name="image" content="/img/meta-image.jpg" />
 
@@ -78,20 +78,12 @@
       </div>
 
       <div class="row pt-md-giga pt-kilo">
-        <div class="col-10 offset-1 offset-md-0 col-md-4 pb-deci">
-          <a href="/odziez-szyta-na-miare">
-            <img src="../../img/clean/koszule.jpg" alt="Koszule w kratę szyte na miarę" class="img-link" />
-            <h5 class="text-center pt-deci">
-              Szycie odzieży na miarę
-            </h5>
-          </a>
-        </div>
 
         <div class="col-10 offset-1 offset-md-0 col-md-4 pb-deci">
           <a href="/podsufitek-namiotowy">
-            <img src="../../img/clean/1-260.jpg" alt="Gala do namiotów imprezowych, podsufitek namiotowy" class="img-link" />
+            <img src="../../img/clean/1-260.jpg" alt="Gala do namiotów imprezowych, podsufitka namiotowa" class="img-link" />
             <h5 class="text-center pt-deci">
-              Podsufitek namiotowy do namiotów imprezowych
+              Podsufitka do namiotów imprezowych
             </h5>
           </a>
         </div>
@@ -101,6 +93,24 @@
             <img src="../../img/poszycie-1.png" alt="Poszycie stadionu, pokrowiec na stadion" class="img-link" />
             <h5 class="text-center pt-deci">
               Poszycia stadionów
+            </h5>
+          </a>
+        </div>
+
+        <div class="col-10 offset-1 offset-md-0 col-md-4 pb-deci">
+          <a href="/namioty">
+            <img src="../../img/clean/n-8.jpg" alt="Namioty imprezowe" class="img-link" />
+            <h5 class="text-center pt-deci">
+              Namioty imprezowe
+            </h5>
+          </a>
+        </div>
+
+        <div class="col-10 offset-1 offset-md-0 col-md-4 pb-deci">
+          <a href="/odziez-szyta-na-miare">
+            <img src="../../img/clean/koszule.jpg" alt="Koszule w kratę szyte na miarę" class="img-link" />
+            <h5 class="text-center pt-deci">
+              Szycie odzieży na miarę
             </h5>
           </a>
         </div>
